--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(compiler VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(compiler main.c error_handler.h error_handler.c code_parser.h code_parser.c writer.h writer.c)
+add_executable(compiler main.c error_handler.h error_handler.c code_parser.h code_parser.c writer.h writer.c symbol_table.h symbol_table.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
